--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sa",
+  "name": "schooladministor",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.15",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
